--- a/.gitignore
+++ b/.gitignore
@@ -19,51 +19,34 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# Virtual Environment
+# Virtual environments
 venv/
 env/
 ENV/
-env.bak/
-venv.bak/
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
 
+# Environment variables
+.env
+.env.local
+.env.production
+
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# Flask
-instance/
-.webassets-cache
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Logs
 *.log
-logs/
 
-# Temporary files
-*.tmp
-*.temp
+# Railway
+.railway/
