--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Flask web framework
+# Core Flask dependencies
 Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Werkzeug==2.3.7
@@ -6,24 +6,14 @@ Werkzeug==2.3.7
 # Database
 SQLAlchemy==2.0.23
 
-# Machine Learning
-scikit-learn==1.3.2
-numpy==1.24.3
-pandas==2.0.3
-
-# Web scraping
+# Web scraping (lightweight)
 requests==2.31.0
 beautifulsoup4==4.12.2
-lxml==4.9.3
 
 # Date/time handling
 python-dateutil==2.8.2
 pytz==2023.3
 
-# Additional utilities
-python-dotenv==1.0.0
-
 # Production deployment
 gunicorn==21.2.0
 psycopg2-binary==2.9.7
-redis==4.6.0
