--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ pytz==2023.3
 # Production deployment
 gunicorn==21.2.0
 psycopg2-binary==2.9.7
+
+# Caching and performance
+redis==5.0.1
+celery==5.3.4
