--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,8 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "python app.py"
-healthcheckPath = "/"
+startCommand = "python start_app.py"
+healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
