feat: integrate SportsDataIO schedules and The Odds API; odds fields; Celery schedules; deployment configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,48 @@
 # Python
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE
+.vscode/
+.idea/
+
+# Local DB
+*.db
+ares_ai.db
+
+# Env files
+.env
+.env.local
+.env.*.local
+
+# OS
+Thumbs.db
+.DS_Store
+# Python
+__pycache__/
 *.py[cod]
 *$py.class
 *.so
