Fix staging environment configuration and add debug endpoint
- Add essential environment variables to railway.toml
- Clean up Procfile for Railway deployment
- Add /api/debug/data-collection endpoint for troubleshooting
- Update comprehensive README with deployment instructions
- Fix scheduler and data collection configuration

--- a/railway.toml
+++ b/railway.toml
@@ -11,3 +11,8 @@ restartPolicyMaxRetries = 10
 [env]
 FLASK_ENV = "production"
 FLASK_DEBUG = "false"
+SPORT_ENABLED = "nfl,mlb"
+USE_THREAD_SCHEDULER = "true"
+COLLECT_INTERVAL_SECONDS = "600"
+PREFER_ESPN_SCHEDULE = "true"
+ESPN_DAYS_LOOKAHEAD = "7"
